sas-core/main/default/objects/ServiceClass__mdt/ServiceClass__mdt.object-meta.xml
<CustomObject>
    <label>Service Class</label>
    <pluralLabel>Service Classes</pluralLabel>
</CustomObject>