sas-core/main/default/objects/ServiceClass__mdt/fields/AirportCode__c.field-meta.xml
<CustomField>
    <fullName>AirportCode__c</fullName>
    <label>Airport Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>