sas-core/main/default/objects/ServiceClass__mdt/fields/CoupanValue__c.field-meta.xml
<CustomField>
    <fullName>CoupanValue__c</fullName>
    <label>Coupan Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>