sas-core/main/default/objects/ServiceClass__mdt/fields/DelayInMinute__c.field-meta.xml
<CustomField>
    <fullName>DelayInMinute__c</fullName>
    <label>Delay In Minute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>