sas-core/main/default/objects/ServiceClass__mdt/fields/ExpiryTime__c.field-meta.xml
<CustomField>
    <fullName>ExpiryTime__c</fullName>
    <label>Expiry Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>