sas-core/main/default/objects/ServiceClass__mdt/fields/Max_Delay__c.field-meta.xml
<CustomField>
    <fullName>Max_Delay__c</fullName>
    <label>Max Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>