sas-core/main/default/objects/ServiceClass__mdt/fields/Service_Class_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Class_Code__c</fullName>
    <label>Service Class Code</label>
    <length>254</length>
    <type>Text</type>
</CustomField>