sas-core/main/default/objects/ServiceClass__mdt/fields/VoucherName__c.field-meta.xml
<CustomField>
    <fullName>VoucherName__c</fullName>
    <label>Voucher Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>